New API return format that separate values and labels. And use's Eugenia's array of datapoints method

--- a/Pipfile
+++ b/Pipfile
@@ -14,9 +14,10 @@ lxml = "*"
 PySocks = "*"
 alembic = "*"
 mysqlclient = "*"
-humaniki-schema = {editable = true,version = "*"}
+humaniki-schema = {editable = true,version = "*", path = "."}
 pandas = "*"
 pytest = "*"
+pyyaml = "*"
 
 [requires]
-python_version = "3.7"
+python_verusion = "3.7"
